Aligning corrections applied to dropdown navbar menu and <About me> area's central image.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,12 +72,14 @@ html {
     background: #faff00;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
 .header .menu .navbar-nav a:hover {
     background: #faff00;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 
 .header .menu .navbar-nav {
@@ -99,46 +101,48 @@ html {
     background-color: rgba(55, 48, 48, 0.95);
     padding-right: 0;
     padding-left: 0;
+    margin-left: 11rem;
 }
 
 .header .menu .collapsing .nav-link,
 .header .menu .show .nav-link {
     margin-left: 1rem;
     margin-right: 1rem;
-    text-align: right;
+    text-align: center;
 }
 
-@media screen and (max-width: 1000px) {
-    .header .menu .collapsing,
-    .header .menu .show {
-        font-size: 100%;
-    }
-}
-
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 991px) {
     .header .menu .collapsing,
     .header .menu .show {
         font-size: 80%;
+        margin-left: 36rem;
     }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 744px) {
     .header .menu .collapsing,
     .header .menu .show {
         font-size: 80%;
+        margin-left: 22rem;
+    }
+}
+
+
+
+@media screen and (max-width: 510px) {
+    .header .menu .collapsing,
+    .header .menu .show {
+        font-size: 80%;
+        margin-left: 12rem;
     }
 }
 
 @media screen and (max-width: 350px) {
     .header .menu .collapsing,
     .header .menu .show {
-        margin-left: 35%;
+        margin-left: 6rem;
         font-size: 80%;
     }
-}
-
-.header .menu .show {
-    margin-right: auto;
 }
 
 .header .menu .show .navbar-nav {
@@ -288,7 +292,7 @@ hr {
     border-color: #373030;
     border-width: 2px;
     border-radius: 50%;
-    margin: 0 auto;
+    margin: auto;
 }
 
 #circle-cover-bg {
@@ -298,7 +302,7 @@ hr {
     background-size: cover;
 }
 
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 991px) {
     #circle-container {
         width: 15rem;
         height: 15rem;
